Fri, Aug 9, 2024, 12:29 AM +00:00

--- a/html-tutorial/about.html
+++ b/html-tutorial/about.html
@@ -8,7 +8,19 @@
     </head>
 
     <body>
+        <header>
+
+        </header>
+        <main>
+            <article>
+
+            </article>
+        </main>
+        <foot>
+            
+        </foot>
 
     </body>
+
 
 </html>
