Fri, Aug 9, 2024, 12:34 AM +00:00

--- a/html-tutorial/about.html
+++ b/html-tutorial/about.html
@@ -16,7 +16,7 @@
                 <h1>About Us</h1>
 
                 <p>
-                    Curbside Thai brings the rich flavor of Thailand to
+                    <strong>Curbside Thai</strong> brings the rich flavor of Thailand to
                     North Carolina. Master Chef Sajja Adulet, with over 35
                     years of experience at the House of Asia, now offers
                     that same fine dining to the streets of Charlotte
