--- a/html-tutorial/about.html
+++ b/html-tutorial/about.html
@@ -30,13 +30,13 @@
                     11 a.m. to 7 p.m. on Monday through Thursday, and
                     11 a.m. to 11 p.m. on Friday and Saturday. Taste the
                     difference! If you can't get away from your desk,
-                    Curbside Thai will deliver.
+                    <em>Curbside Thai will deliver.</em>
                 </p>
 
                 <p>
                     Contact us to cater your next party and experience
-                    what Carolina Traveler calls the finest Asian food
-                    on or off the streets of Charlotte.
+                    what <cite>Carolina Traveler</cite> calls <q>the finest Asian food
+                    on or off the streets of Charlotte.</q>
                 </p>
 
             </article>
