Fri, Aug 9, 2024, 12:38 AM +00:00

--- a/html-tutorial/about.html
+++ b/html-tutorial/about.html
@@ -42,6 +42,7 @@
             </article>
         </main>
         <foot>
+            Curbside Thai &bullet; 411 Belde Drive, Charlotte &nbsp; NC 28201 &bullet; 704-555-1151
 
         </foot>
 
