--- a/html-tutorial/about.html
+++ b/html-tutorial/about.html
@@ -5,7 +5,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>About Curbsibe Thai</title>
-    </head>
+        <link href="styles/base.css" rel="stylesheet">
+        <link href="styles/layout2.css" rel="stylesheet" </head>
 
     <body>
         <header>
@@ -36,7 +37,7 @@
                 <p>
                     Contact us to cater your next party and experience
                     what <cite>Carolina Traveler</cite> calls <q>the finest Asian food
-                    on or off the streets of Charlotte.</q>
+                        on or off the streets of Charlotte.</q>
                 </p>
 
             </article>
