--- a/html-tutorial/about.html
+++ b/html-tutorial/about.html
@@ -6,7 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>About Curbsibe Thai</title>
         <link href="styles/base.css" rel="stylesheet">
-        <link href="styles/layout2.css" rel="stylesheet" </head>
+        <link href="styles/layout2.css" rel="stylesheet">
+    </head>
 
     <body>
         <header>
