Fri, Aug 9, 2024, 12:52 AM +00:00

--- a/html-tutorial/about.html
+++ b/html-tutorial/about.html
@@ -10,7 +10,7 @@
     </head>
 
     <body>
-        <header>
+        <header class="logo">
             <img src="images/logo2.png" alt='Curbside' >
 
         </header>
