--- a/html-tutorial/reviews.html
+++ b/html-tutorial/reviews.html
@@ -16,37 +16,44 @@
       <article>
          <h1>Reviews</h1>
          Reviews
-         <p>
-
-            The culinary art of the food truck vendor has been steadily
-            improving over the last 10 years with fine offerings from
-            Antonio's Italian, Organic on the Road, and now Curbside Thai.
-            Sajja Adulet is to be congratulated for offering delicious
-            and authentic Thai food at a reasonable price. We think
-            Curbside Thai provides the finest Asian food on or off
-            the streets of Charlotte.
-         <p>Carolina Traveler</p>
-         </p>
-
-
-         <p>
-            Steaming rice with a spicy Asian sauce is common street fare
-            and we all accept its limitations in exchange for the
-            convenience of a quick bite on the run. With Curbside Thai you
-            don't have to compromise. Building on his experience as a
-            master chef at several fine establishments on the East Coast,
-            Sajja Adulet has brought the taste of fine dining to the
-            Food Cart Wars and we couldn't be happier.
-         <p>Food Cart Review</p>
-         </p>
+         <blockquote>
+            <p>
+               The culinary art of the food truck vendor has been steadily
+               improving over the last 10 years with fine offerings from
+               Antonio's Italian, Organic on the Road, and now Curbside Thai.
+               Sajja Adulet is to be congratulated for offering delicious
+               and authentic Thai food at a reasonable price. We think
+               Curbside Thai provides the finest Asian food on or off
+               the streets of Charlotte.
+            </p>
+            <p>Carolina Traveler</p>
+         </blockquote>
 
 
-         <p>Best in Show (Asian)</p>
-         <p>Food Cart Cook-off</p>
+         <blockquote>
+            <p>
+               Steaming rice with a spicy Asian sauce is common street fare
+               and we all accept its limitations in exchange for the
+               convenience of a quick bite on the run. With Curbside Thai you
+               don't have to compromise. Building on his experience as a
+               master chef at several fine establishments on the East Coast,
+               Sajja Adulet has brought the taste of fine dining to the
+               Food Cart Wars and we couldn't be happier.
+            </p>
+            <p>Food Cart Review</p>
+         </blockquote>
 
 
-         <p>First Prize (Vendor)</p>
-         <p>Vendy Awards</p>
+         <blockquote>
+            <p>Best in Show (Asian)</p>
+            <p>Food Cart Cook-off</p>
+         </blockquote>
+
+
+         <blockquote>
+            <p>First Prize (Vendor)</p>
+            <p>Vendy Awards</p>
+         </blockquote>
 
       </article>
       <footer>
