Fri, Aug 9, 2024, 1:13 AM +00:00

--- a/html-tutorial/about.html
+++ b/html-tutorial/about.html
@@ -14,11 +14,11 @@
             <img src="images/logo2.png" alt='Curbside' >
             <nav>
                 <ul>
-                    <li>About</li>
-                    <li>Locations</li>
-                    <li>Reviews</li>
-                    <li>Catering</li>
-                    <li>Contact</li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="locations.html">Locations</a></li>
+                    <li><a href="reviews.html">Reviews</a></li>
+                    <li><a href="catering.html">Catering</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
 
