--- a/html-tutorial/about.html
+++ b/html-tutorial/about.html
@@ -11,7 +11,9 @@
 
     <body>
         <header>
-            <img src="images/logo2.png" alt='Curbside' >
+            <a href="index.html">
+                <img src="images/logo2.png" alt='Curbside'>
+            </a>
             <nav>
                 <ul>
                     <li><a href="about.html">About</a></li>
