--- a/html-tutorial/index.html
+++ b/html-tutorial/index.html
@@ -11,7 +11,9 @@
 
    <body>
       <header>
-         
+         <a href="index.html">
+            <img src="images/logo2.png" alt='Curbside'>
+        </a>
       </header>
       <nav>
          <a href="about.html"><img src="images/about.png" alt="About Us" /></a>
